--- a/client/src/index.css
+++ b/client/src/index.css
@@ -93,7 +93,7 @@ nav .logo-container .logo {
         to bottom,
         rgba(0, 0, 0, 0.65) 0%,
         rgba(0,0,0,0)100%
-    ),url(C:\Users\Nico\Documents\wegatyou\client\src\images\datingimage.jpg)
+    ),url("../src/images/datingimage.jpg")
 }
 .home {
     margin-top: 30vh;
